# quadruped-version-3

./: belt-gear.20231010-154421.FCBak  belt-gear.20231010-154632.FCBak  belt-gear.stl  hip-lower.20231006-145939.FCBak  hip-lower.20231006-153912.FCBak  hip-lower.FCStd  hip-upper-shell.stl  hip.FCStd  hip.FCStd1  leg.20231010-134405.FCBak  leg.20231010-134934.FCBak  leg.20231011-141522.FCBak  leg.20231018-151202.FCBak  leg.FCStd  leg.FCStd1  razhodi.txt  readme.md  resources.txt  todo  xd-37gb520-Body.stl  xd-37gb520.20231010-134504.FCBak  xd-37gb520.FCStd  xd-37gb520.FCStd1
documentation/: leg-schem.xcf
encoder/: ENCODERresources.txt  base.FCStd  encoder-gear-Body.stl  encoder-gear.20231125-160650.FCBak  encoder-gear.FCStd  encoder-wheel-8-1mm.20231213-101408.FCBak  encoder-wheel-8-1mm.FCStd  encoder-wheel-8-1mm.stl  ew-16-1mm.FCStd  mid-gear-arm-Body.stl  mid-gear-arm.20231213-100203.FCBak  mid-gear-arm.FCStd  middle-gear-Body.stl  middle-gear.20231125-163524.FCBak  middle-gear.FCStd  on-motor-gear-Body.stl  on-motor-gear.20231128-102921.FCBak  sensor-base-V2.stl  sensor-base-old.FCStd  sensor-base.20231026-201706.FCBak  sensor-base.20231115-113607.FCBak  sensor-base.FCStd  sensor-base.stl
femur/: femur.20231010-114714.FCBak  femur.20231010-114734.FCBak  femur.20231011-141147.FCBak  femur.FCStd  femur.stl
hardware/: body-grouped.20240218-214829.FCBak  body-grouped.FCStd  body-hips.20240217-104036.FCBak  body-hips.20240217-131638.FCBak  body-hips.20240218-134157.FCBak  body-hips.20240218-140739.FCBak  body-hips.20240218-153616.FCBak  body-hips.20240218-155903.FCBak  body-hips.20240218-222520.FCBak  body-hips.FCStd  body.20240130-113007.FCBak  body.FCStd
hip/: hip-lower-Body.stl  hip-lower.20231007-220508.FCBak  hip-lower.20231007-224101.FCBak  hip-lower.FCStd  hip-sensor-cap-68.stl  hip-sensor-cap-Body.stl  hip-sensor-cap.FCStd  (+6 more)
software/encoder/phototransistor-read/: CMakeLists.txt  commands.txt  main.c
software/encoder/quadrature-encoder/: CMakeLists.txt  main.c
software/udp-demo/: CMakeLists.txt  main.c  quadrature_encoder.pio
(+368 files in other folders)
